syntax = "proto3";
package pt.ulisboa.tecnico.distledger.contract.namingserver;

// namingserver interface of the DistLedger Service (only for phases 2 & 3 of the project)

message RegisterRequest {
  string service = 1;
  string qualifier = 2;
  string address = 3;
}

message RegisterResponse {}

message LookupRequest {
  string service = 1;
  string qualifier = 2;
}

message LookupResponse {
  repeated string servers = 1;
}

message DeleteRequest {
  string service = 1;
  string address = 2;
}

message DeleteResponse {}

service NamingServerService {
  rpc register(RegisterRequest) returns (RegisterResponse);
  rpc lookup(LookupRequest) returns (LookupResponse);
  rpc delete(DeleteRequest) returns (DeleteResponse);
}
